Fix instructions width back to 45vh
55vh does not look well on wide screens

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ h2 {
 .Instruction {
   direction: rtl;
   text-align: start;
-  width: 55vw;
+  width: 45vw;
   margin: 10px auto 20px;
 }
 
